# ihroteka-converter

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yaml  labels.yaml  release.yaml
src/ihroteka_converter/: __init__.py  __main__.py
