[project]
authors = [{ "name" = "Volodymyr Pivoshenko", "email" = "contact@pivoshenko.dev" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []
description = "A lightweight package for converting Markdown into Steam-compatible markup."
keywords = [
  "bbcode",
  "converter",
  "formatter",
  "gaming",
  "ihroteka",
  "markdown",
  "markup",
  "parser",
  "steam",
  "steam-bbcode",
  "steam-bbcode-converter",
  "steam-workshop",
  "text-processing"
]
license = "MIT"
maintainers = [{ "name" = "Volodymyr Pivoshenko", "email" = "contact@pivoshenko.dev" }]
name = "ihroteka-converter"
readme = "README.md"
requires-python = ">=3.10"
version = "1.2.4"

[project.urls]
Homepage = "https://github.com/pivoshenko/ihroteka-converter"
Repository = "https://github.com/pivoshenko/ihroteka-converter"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
formatters = ["pyupgrade~=3.21.2", "ruff~=0.15.15"]
linters = ["ruff~=0.15.15", "ty~=0.0.40"]
tests = ["coverage[toml]~=7.14.1", "pytest~=9.0.3", "pytest-cov~=7.1.0", "pytest-mock~=3.15.1", "pytest-sugar~=1.1.1"]

[tool.coverage.run]
omit = ["*/__init__.py"]

[tool.pytest.ini_options]
addopts = [
  "--basetemp=tests/fixtures",
  "--color=yes",
  "--cov=src",
  "--cov-report=term-missing",
]
testpaths = ["tests"]

[tool.ruff]
fix = true
line-length = 100
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
ignore = ["COM812", "D102", "D103", "D203", "D212"]
select = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true
from-first = false
length-sort-straight = true
lines-after-imports = 2
lines-between-types = 1
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["INP001", "S101"]
